--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 datasource:
-    url: jdbc:postgresql://localhost:5432/ugd_bpm
-    username: ugd
-    password: P@ssw0rd
+    url: jdbc:postgresql://localhost:5432/db_rk
+    username: db_admin
+    password: 1234
     driver-class-name: org.postgresql.Driver
 
 
