--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,15 @@
-datasource:
-    url: jdbc:postgresql://localhost:5432/db_rk
-    username: db_admin
-    password: 1234
-    driver-class-name: org.postgresql.Driver
-
+spring:
+    datasource:
+        url: jdbc:postgresql://localhost:5432/db_rk
+        username: db_admin
+        password: 1234
+        driver-class-name: org.postgresql.Driver
+    jpa:
+        properties:
+            hibernate:
+                jdbc:
+                    lob:
+                        non_contextual_creation: true
+                dialect: org.hibernate.dialect.PostgreSQLDialect
 
 
